<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aliosama.porjectandroid.Activities.Activities.Teacher.TUpdateAssignmentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StartTime"
            android:textAllCaps="false"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/UpdateStartTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/EndTime"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/UpdateEndTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <EditText
        android:id="@+id/UpdateTypeOfWorkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/TypeOfWork"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/UpdateDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Description"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/UpdateUploadAssignmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UploadBtn"
            android:layout_margin="5dp"
            android:textAllCaps="false"
            android:onClick="onUploadAssignmentListener"/>

        <TextView
            android:id="@+id/UpdateAssignmentNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Assignment.pdf"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/DeleteAssignmentBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Delete"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onDeleteAssignmentListener"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <Button
            android:id="@+id/TUpdateAssignmentBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UpdateBtn"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onUpdateAssignmentListener"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>
