<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aliosama.porjectandroid.Activities.Activities.Teacher.AddAssignmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StartTime"
            android:textAllCaps="false"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/StartTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/EndTime"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/EndTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <EditText
        android:id="@+id/TypeOfWorkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/TypeOfWork"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/DescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Description"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/UploadAssignmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UploadBtn"
            android:layout_margin="5dp"
            android:textAllCaps="false"
            android:onClick="onUploadAssignmentListener"/>

        <TextView
            android:id="@+id/AssignmentNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Assignment.pdf"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/SubmitAssignmentBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/SubmitBtn"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onSubmitAssignmentListener"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge" />


</LinearLayout>
