<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.aliosama.porjectandroid.Activities.Activities.Teacher.LoginActivity">

    <EditText
        android:id="@+id/ETEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/NameHint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/EDPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ETEmail"
        android:layout_alignStart="@+id/ETEmail"
        android:layout_below="@+id/ETEmail"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/PasswordHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EDPassword"
        android:layout_marginTop="31dp"
        android:text="@string/LoginBtn"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignRight="@+id/EDPassword"
        android:layout_alignEnd="@+id/EDPassword"
        android:layout_alignLeft="@+id/EDPassword"
        android:layout_alignStart="@+id/EDPassword"
        android:onClick="onLoginListener" />

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginBtn"
        android:layout_marginTop="16dp"
        android:text="@string/SignUpBtn"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignRight="@+id/LoginBtn"
        android:layout_alignEnd="@+id/LoginBtn"
        android:layout_alignLeft="@+id/LoginBtn"
        android:layout_alignStart="@+id/LoginBtn"
        android:onClick="onLoginListener"/>
</RelativeLayout>
